# kase

./: CLAUDE.md  Cargo.toml  DESIGN.md
deploy/: Dockerfile  cloudbuild.yaml
examples/: karkinos-scan-result.json  scan-result.json
scripts/: smoke-test.sh
src/: cli.rs  ingest.rs  lib.rs  main.rs  metrics.rs  model.rs  otel.rs  sla.rs
src/api/: cases.rs  ingest.rs  metrics.rs  middleware.rs  mod.rs
src/store/: firestore_store.rs  mod.rs
tests/: integration.rs  properties.rs
