[package]
name = "kase"
version = "0.1.0"
edition = "2024"
description = "Cloud-native security case management — companion to karkinos"
license = "MIT"

[dependencies]
# API framework
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time / IDs
chrono = { version = "0.4", features = ["serde"] }
ulid = { version = "1", features = ["serde"] }

# HTTP client (for CLI)
reqwest = { version = "0.12", features = ["json", "rustls-tls-native-roots"], default-features = false }

# Firestore (tls-webpki-roots avoids OpenSSL dependency for Alpine/musl builds)
firestore = { version = "0.48", default-features = false, features = ["tls-webpki-roots"] }
futures = "0.3"
rustls = "0.23"
# jsonwebtoken needs a crypto provider (transitive dep via gcloud-sdk)
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }

# Error handling
anyhow = "1"
thiserror = "2"
async-trait = "0.1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
proptest = "1"
http-body-util = "0.1"
